# delt2a

./: .gitignore  CMakeLists.txt  LICENSE  README.md  d2_animate.cpp  d2_cdsl.hpp  d2_chardef.hpp  d2_colors.hpp  d2_dsl.hpp  d2_element_units.hpp  d2_exceptions.hpp  d2_extended_page.hpp  d2_fragmented_buffer.cpp  d2_fragmented_buffer.hpp  d2_input_base.cpp  d2_input_base.hpp  d2_interpolator.cpp  d2_interpolator.hpp  d2_io_handler.cpp  d2_io_handler.hpp  d2_io_handler_frwd.hpp  d2_locale.cpp  d2_locale.hpp  d2_main_worker.hpp  d2_meta.hpp  d2_model.hpp  d2_module.cpp  d2_module.hpp  d2_pixel.cpp  d2_pixel.hpp  d2_platform.hpp  d2_platform_string.cpp  d2_platform_string.hpp  d2_screen.cpp  d2_screen.hpp  d2_screen_comps.hpp  d2_sdsl.hpp  d2_signal_handler.cpp  d2_signal_handler.hpp  d2_std.hpp  (+13 more)
cmake/: d2_platform.hpp.in  modules.cmake  system.cmake  target.cmake
core/io/: d2_context.cpp  d2_context.hpp  d2_input_base.cpp  d2_input_base.hpp  d2_main_worker.cpp  d2_main_worker.hpp  d2_module.cpp  d2_module.hpp  d2_signal_handler.cpp  d2_signal_handler.hpp
core/lsx/: d2_solver.cpp  d2_solver.hpp  d2_solver_ops.hpp  d2_solver_types.cpp
core/mods/: d2_audio.cpp  d2_audio.hpp  d2_binder.cpp  d2_binder.hpp  d2_core.cpp  d2_core.hpp  d2_ext.cpp  d2_ext.hpp  d2_http.cpp  d2_http.hpp  d2_session.cpp  d2_session.hpp  d2_ws.cpp  d2_ws.hpp
core/platform/: d2_chardef.hpp  d2_colors.hpp  d2_extended_page.cpp  d2_extended_page.hpp  d2_fragmented_buffer.cpp  d2_fragmented_buffer.hpp  d2_locale.cpp  d2_locale.hpp  d2_platform_string.cpp  d2_platform_string.hpp
core/screen/: d2_animate.cpp  d2_animate.hpp  d2_screen.cpp  d2_screen.hpp  d2_screen_comps.cpp  d2_screen_comps.hpp
core/tree/: d2_styles.hpp  d2_styles_base.hpp  d2_text_select.cpp  d2_text_select.hpp  d2_theme.cpp  d2_theme.hpp  d2_tree.hpp  d2_tree_construct.hpp  d2_tree_element.cpp  d2_tree_element.hpp  d2_tree_element_frwd.hpp  d2_tree_parent.cpp  d2_tree_parent.hpp  d2_tree_state.cpp  d2_tree_state.hpp
core/types/: d2_element_units.hpp  d2_pixel.cpp  d2_pixel.hpp  d2_vtypes.cpp  d2_vtypes.hpp
core/utils/: d2_model.cpp  d2_model.hpp
delt2a/: d2_cdsl.hpp  d2_chardef.hpp  d2_colors.hpp  d2_dsl.hpp  d2_element_units.hpp  d2_exceptions.hpp  d2_extended_page.cpp  d2_extended_page.hpp  d2_fragmented_buffer.cpp  d2_fragmented_buffer.hpp  d2_interpolator.cpp  d2_interpolator.hpp  d2_io_handler.cpp  d2_io_handler.hpp  d2_io_handler_frwd.hpp  d2_locale.hpp  d2_meta.hpp  d2_model.cpp  d2_model.hpp  d2_module.cpp  d2_module.hpp  d2_pixel.cpp  d2_pixel.hpp  d2_platform.hpp  d2_platform_string.cpp  d2_platform_string.hpp  d2_screen.cpp  d2_screen.hpp  d2_screen_comps.hpp  d2_screen_frwd.hpp  d2_sdsl.hpp  d2_signal_handler.cpp  d2_signal_handler.hpp  d2_std.hpp  d2_styles.hpp  d2_styles_base.hpp  d2_tree.hpp  d2_tree_element.cpp  d2_tree_element.hpp  d2_tree_element_frwd.hpp  (+4 more)
delt2a/elements/: d2_box.cpp  d2_box.hpp  d2_button.cpp  d2_button.hpp  d2_checkbox.cpp  d2_checkbox.hpp  d2_demand_scrollbox.cpp  d2_demand_scrollbox.hpp  d2_draggable_box.cpp  d2_draggable_box.hpp  d2_dropdown.cpp  d2_dropdown.hpp  d2_element_utils.cpp  d2_element_utils.hpp  d2_flow_box.cpp  d2_flow_box.hpp  d2_graph.cpp  d2_graph.hpp  d2_image.cpp  d2_image.hpp  d2_input.cpp  d2_input.hpp  d2_matrix.cpp  d2_matrix.hpp  d2_multiline_input.cpp  d2_multiline_input.hpp  d2_scrollbox.cpp  d2_scrollbox.hpp  d2_separator.cpp  d2_separator.hpp  d2_slider.cpp  (+7 more)
delt2a/logs/: CMakeLists.txt  rdb_mapper.cpp  rdb_mapper.hpp  rdb_runtime_logs.cpp  rdb_runtime_logs.hpp  runtime_logs.cpp  runtime_logs.hpp
delt2a/mt/: CMakeLists.txt  task_ring.hpp  thread_control.hpp  thread_defer.hpp  thread_future.hpp  thread_pool.cpp  thread_pool.hpp
elements/: d2_box.cpp  d2_box.hpp  d2_button.cpp  d2_button.hpp  d2_checkbox.cpp  d2_checkbox.hpp  d2_demand_scrollbox.cpp  d2_demand_scrollbox.hpp  d2_draggable_box.cpp  d2_draggable_box.hpp  d2_dropdown.cpp  d2_dropdown.hpp  d2_element_utils.cpp  d2_element_utils.hpp  d2_flow_box.cpp  d2_flow_box.hpp  d2_graph.cpp  d2_graph.hpp  d2_image.cpp  d2_image.hpp  d2_input.cpp  d2_input.hpp  d2_matrix.cpp  d2_matrix.hpp  d2_multiline_input.cpp  d2_multiline_input.hpp  d2_scrollbox.cpp  d2_scrollbox.hpp  d2_separator.cpp  d2_separator.hpp  d2_slider.cpp  d2_slider.hpp  d2_std.hpp  d2_switch.cpp  d2_switch.hpp  d2_text.cpp  d2_text.hpp
examples/: all.cpp  all.hpp  example-1.hpp  example-2.hpp  example-model-editor.hpp  terminal.cpp
extras/: d2_audio_device_selector.cpp  d2_audio_device_selector.hpp  d2_color_picker.cpp  d2_color_picker.hpp  d2_debug_box.cpp  d2_debug_box.hpp  d2_default_styles.hpp  d2_default_theme.cpp  d2_default_theme.hpp  d2_exit_prompt.cpp  d2_exit_prompt.hpp  d2_file_explorer.cpp  d2_file_explorer.hpp  d2_loading_indicators.hpp  d2_theme_selector.cpp  d2_theme_selector.hpp
logs/: CMakeLists.txt  logd.cpp  logd.hpp  runtime_logs.cpp  runtime_logs.hpp
lsx/: d2_solver.hpp  d2_solver_types.hpp
mods/: d2_audio.cpp  d2_audio.hpp  d2_binder.cpp  d2_binder.hpp  d2_core.cpp  d2_core.hpp  d2_ext.cpp  d2_ext.hpp  d2_http.hpp  d2_session.cpp  d2_session.hpp  d2_ws.hpp
mt/: CMakeLists.txt  control.hpp  defer.hpp  future.hpp  pool.cpp  pool.hpp  task_ring.hpp
os/: d2_linux_osconf.hpp  d2_linux_system_audio.cpp  d2_linux_system_audio.hpp  d2_linux_system_input.hpp  d2_registry.cpp  d2_registry.hpp  d2_unix_osconf.hpp  d2_unix_system_io.hpp
os/audio/pipewire/: CMakeLists.txt  d2_pipewire_audio.cpp  d2_pipewire_audio.hpp
os/io/unix/: CMakeLists.txt  d2_unix_system_io.cpp  d2_unix_system_io.hpp
os/net/curl/: CMakeLists.txt  d2_curl_global.cpp  d2_curl_global.hpp  d2_http_curl.cpp  d2_http_curl.hpp  d2_ws_curl.cpp  d2_ws_curl.hpp
programs/: d2_debug_box.cpp  d2_debug_box.hpp  d2_quedits.hpp
templates/: d2_audio_device_selector.cpp  d2_audio_device_selector.hpp  d2_color_picker.cpp  d2_color_picker.hpp  d2_default_styles.hpp  d2_default_theme.cpp  d2_default_theme.hpp  d2_exit_prompt.cpp  d2_exit_prompt.hpp  d2_file_explorer.cpp  d2_file_explorer.hpp  d2_loading_indicators.hpp  d2_theme_selector.cpp  d2_theme_selector.hpp
(+41 files in other folders)
